--- a/src/XFood.Web/wwwroot/index.html
+++ b/src/XFood.Web/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rBpGj5-6OVvA8dSIsjN+uvBPTTGfJG93S9YD9ixu94d6n5ZlOtnnXCDK7SsnN2C" crossorigin="anonymous">
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="XFoodBlazor.Web.Client.styles.css" rel="stylesheet" />
